# myZelda

./: .gitignore  CMakeLists.txt  README.md
include/: animation.h  camera.h  collision.h  helpers.h  keyboard.h  object.h  player.h  player_controller.h  room_scroll.h  world.h  zelda.h
src/: main.c
src/animation/: create_animation.c  destroy_animation.c
src/camera/: apply_camera.c  create_camera.c  destroy_camera.c  update_camera.c
src/collision/: can_move_to.c  move_object_if_possible.c
src/helpers/: normalize_vector.c  vector_length.c
src/object/: animate_object.c  create_object.c  destroy_object.c  draw_object.c  move_object.c  place_object.c  render_object.c
src/player/: animate_player.c  change_direction.c  create_player.c  destroy_player.c  move_player.c  set_player_position.c
src/player_controller/: create_player_controller.c  handle_events.c  update_player_controller.c
src/room_scroll/: calculate_new_camera_position.c  camera_reached_new_room.c  continue_camera_scroll.c  ensure_player_within_camera_bounds.c  get_adjusted_bounds.c  get_view_bounds.c  move_player_with_camera.c  player_reached_edge_of_screen.c  position_player_after_scroll.c  start_camera_scroll.c  update_camera_for_room_scroll.c
src/world/: create_world.c  destroy_world.c  draw_world.c  render_world.c  update_world.c
